# CVEAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml  eval.yml
dashboard/: app.py
docs/: DEMO.md  WRITEUP.md  palisade-project-spec.md
evals/: README.md  baseline.py  datasets.py  metrics.json  metrics.py  run_eval.py  verifier_eval.py
evals/golden/cases/npm-lodash-patched/: advisories.json  labels.json  package-lock.json
evals/golden/cases/npm-lodash-vulnerable/: labels.json  package-lock.json
evals/golden/cases/pypi-jinja2-patched/: advisories.json  labels.json
evals/golden/cases/pypi-jinja2-vulnerable/: labels.json
evals/golden/cases/pypi-werkzeug-patched/: labels.json
evals/golden/cases/pypi-werkzeug-vulnerable/: advisories.json  labels.json  requirements.txt
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_scans_queue.py
src/palisade/: cli.py  config.py  dashboard.py  main.py  queue.py  resolve.py  scanner.py  worker.py
src/palisade/agents/: __init__.py  graph.py  llm.py  nodes.py
src/palisade/clients/: base.py  depsdev.py  osv.py
src/palisade/db/: base.py  tables.py
src/palisade/enrichment/: enrich.py  epss.py  kev.py
src/palisade/github_app/: render.py  webhook.py
src/palisade/ingestion/: normalize.py  sync.py
src/palisade/matching/: matcher.py  reachability.py  version.py
src/palisade/models/: advisory.py  dependency.py  finding.py  state.py
src/palisade/observability/: tracing.py
src/palisade/parsers/: base.py  npm.py  pypi.py  registry.py
tests/: test_agent_graph.py  test_dashboard.py  test_enrichment.py  test_eval.py  test_github_app.py  test_health.py  test_ingestion.py  test_llm_remediate.py  test_matching.py  test_models.py  test_normalize.py  test_osv_client.py  test_parsers.py  test_queue.py  test_resolve.py  test_scanner.py  test_token_bucket.py  test_tracing.py
tests/fixtures/: osv_pypi_example.json  package-lock.json  requirements.txt
(+3 files in other folders)
