[project]
name = "palisade"
version = "0.1.0"
description = "Self-verifying, multi-agent software-supply-chain vulnerability intelligence agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.28",
    "tenacity>=9.0",
    "packaging>=24",
    "semver>=3",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
palisade = "palisade.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palisade"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src/palisade", "tests", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true
